# skyblockvsts

./: .env  .gitignore  database.py  keep_alive.py  main.py  pyproject.toml  requirements.txt
cogs/: database.py  debug.py  errors.py  greetings.py  market.py  rating.py  site.py
static/: style.css
templates/: index.html  results.html
